Support hex and octal values (XSTR-382).
git-svn-id: http://svn.codehaus.org/xstream/trunk@1106 9830eeb5-ddf4-0310-9ef7-f4b9a3e3227e