@@ -13,7 +13,11 @@ public class ShortConverter extends AbstractSingleValueConverter {
     }
 
     public Object fromString(String str) {
-        return Short.valueOf(str);
+    	int value = Integer.decode(str).intValue();
+    	if(value < Short.MIN_VALUE || value > 0xFFFF) {
+    		throw new NumberFormatException("For input string: \"" + str + '"');
+    	}
+        return new Short((short)value);
     }
 
 }
